# ChangeLog for dev-ruby/rmagick
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.83 2007/10/14 15:26:32 corsair Exp $

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> rmagick-1.15.10.ebuild:
  Stable on ppc64; bug #194246

  09 Oct 2007; Christoph Mende <angelos@gentoo.org> rmagick-1.15.10.ebuild:
  Stable on amd64 wrt bug #194246

  02 Oct 2007; Raúl Porcel <armin76@gentoo.org> rmagick-1.15.10.ebuild:
  alpha/ia64 stable wrt #194246

  01 Oct 2007; Joshua Kinard <kumba@gentoo.org> rmagick-1.15.10.ebuild:
  Stable on mips, per #194246.

  30 Sep 2007; Lars Weiler <pylon@gentoo.org> rmagick-1.15.10.ebuild:
  stable ppc, bug #194246

  30 Sep 2007; Markus Meier <maekke@gentoo.org> rmagick-1.15.10.ebuild:
  x86 stable, bug #194246

  30 Sep 2007; Ferris McCormick <fmccor@gentoo.org> rmagick-1.15.10.ebuild:
  Sparc stable --- Bug #194246 --- thanks, Tiago.

  30 Sep 2007; Jeroen Roovers <jer@gentoo.org> rmagick-1.15.10.ebuild:
  Stable for HPPA (bug #194246).

  17 Sep 2007; Hans de Graaff <graaff@gentoo.org> -rmagick-1.15.5.ebuild:
  Remove old version

*rmagick-1.15.10 (17 Sep 2007)

  17 Sep 2007; Hans de Graaff <graaff@gentoo.org> +rmagick-1.15.10.ebuild:
  Version bump, fixes compatibility issue with ImageMagick-6.3.5-9

*rmagick-1.15.8 (04 Aug 2007)

  04 Aug 2007; Hans de Graaff <graaff@gentoo.org> +rmagick-1.15.8.ebuild:
  Version bump. Bug fixes to composite function and documentation fixes.

  24 Jul 2007; Raúl Porcel <armin76@gentoo.org> rmagick-1.15.7-r1.ebuild:
  alpha/ia64 stable

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> rmagick-1.15.7-r1.ebuild:
  Stable on ppc64; bug #184538

  16 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  rmagick-1.15.7-r1.ebuild:
  stable x86, bug 184538

  15 Jul 2007; nixnut <nixnut@gentoo.org> rmagick-1.15.7-r1.ebuild:
  Stable on ppc wrt bug 184538

  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>