@@ -1,31 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST RMagick-1.15.10.tar.bz2 972865 RMD160 ce2b32d64dbeed0dc3ae5e7ec3e4066d65bf1356 SHA1 b1713cfed6e35e9c4ce9137dcef093ed4026a108 SHA256 07596567b01108876c6397a57160acf3da2d0e33b38e077158a0c08fd1a1e971
-DIST RMagick-1.15.7.tar.bz2 958153 RMD160 8beab6ebdbbd5561f7817b4cb89bb9f19d0e1e61 SHA1 2fcf595c1a89f7fda56d91e050a0e3ab0aa05439 SHA256 81865e49060a6080acd224f89893b26e09e24ed8e5df2dc161a000a1fc39559a
-DIST RMagick-1.15.8.tar.bz2 958500 RMD160 7d69c7dc767eba771e0787f1d02c19c5e9823514 SHA1 35b5844de88e644fe31b0ea81a3d731cfbfb7e65 SHA256 638f880800f8bdfb8306e44374e45cd7ca69c2f4fad9cdf572429c7a6c72bbab
-DIST RMagick-1.3.2.tar.bz2 1087150 RMD160 709efd9fe1849bfd999fd53dcc73851f6f343699 SHA1 53fe386d96369e63390d0e977ae4fc49aa479aff SHA256 afbe40311042858fe4286694ced1553dd71bb7f3f04124a050c20a37b4dd0690
 EBUILD rmagick-1.15.10.ebuild 2683 RMD160 c313aaa4b05b851634e81006a36f5f1a3324d3ff SHA1 e82ef63547f4f8527eb7b207e95a763c0756cd73 SHA256 f4b20fe769276db3feb8172302f8ba07fe62bb0635e8d29a03ccbddfb123f7b3
 MD5 c86f04c4ac042277cb1896b37191a9da rmagick-1.15.10.ebuild 2683
 RMD160 c313aaa4b05b851634e81006a36f5f1a3324d3ff rmagick-1.15.10.ebuild 2683
 SHA256 f4b20fe769276db3feb8172302f8ba07fe62bb0635e8d29a03ccbddfb123f7b3 rmagick-1.15.10.ebuild 2683
-EBUILD rmagick-1.15.7-r1.ebuild 2682 RMD160 bc0d839f31772e945bb7528ca2a362ecd0242ef8 SHA1 4b271b82f316a7fc0e6a3bea2f2d85d58828ed66 SHA256 35870a9d37a98c6ef8a074912d4222741838f5b1396f9153ba5a13a128853f74
-MD5 aebef1c6d34155cfa41912da31fa3064 rmagick-1.15.7-r1.ebuild 2682
-RMD160 bc0d839f31772e945bb7528ca2a362ecd0242ef8 rmagick-1.15.7-r1.ebuild 2682
-SHA256 35870a9d37a98c6ef8a074912d4222741838f5b1396f9153ba5a13a128853f74 rmagick-1.15.7-r1.ebuild 2682
-EBUILD rmagick-1.15.7.ebuild 2202 RMD160 accbb5dd73988950629bf42d73cd87613255ef07 SHA1 c8d8a3817306f4561947ede233b196f63ebd5870 SHA256 eee984a607c12b95d654ebf02b0510eab6ca3e1a813ead15d4b3dcefb6488610
-MD5 06af6a64aa54f3caef9f1be547593ae8 rmagick-1.15.7.ebuild 2202
-RMD160 accbb5dd73988950629bf42d73cd87613255ef07 rmagick-1.15.7.ebuild 2202
-SHA256 eee984a607c12b95d654ebf02b0510eab6ca3e1a813ead15d4b3dcefb6488610 rmagick-1.15.7.ebuild 2202
-EBUILD rmagick-1.15.8.ebuild 2684 RMD160 20120ed76d56a2f1773788064c837f9a9ba7a6d5 SHA1 030aaa079827293c566ed7daaba27936982b0794 SHA256 bcdccfed9c483fbc968e4084033e60814d446e86e0de84c1b1bd2bf12f52100e
-MD5 399c3c7d96e6b96f723c6e31813e265a rmagick-1.15.8.ebuild 2684
-RMD160 20120ed76d56a2f1773788064c837f9a9ba7a6d5 rmagick-1.15.8.ebuild 2684
-SHA256 bcdccfed9c483fbc968e4084033e60814d446e86e0de84c1b1bd2bf12f52100e rmagick-1.15.8.ebuild 2684
-EBUILD rmagick-1.3.2.ebuild 884 RMD160 f2f422a50c4504b7def2fc5f6b0636c100d4e566 SHA1 f3e50e45a13251b4bb4044dc8ca6cc4ddd75554f SHA256 91dea8acd1e50848bd3993e5fb36a267cb45c5da9bd81563736abc3ae9800eef
-MD5 bed05d533e46041807f6f50fbde92d71 rmagick-1.3.2.ebuild 884
-RMD160 f2f422a50c4504b7def2fc5f6b0636c100d4e566 rmagick-1.3.2.ebuild 884
-SHA256 91dea8acd1e50848bd3993e5fb36a267cb45c5da9bd81563736abc3ae9800eef rmagick-1.3.2.ebuild 884
-MISC ChangeLog 10887 RMD160 99e5636f9c92e9c56b05c14f42c4b613b961d7d3 SHA1 562373903015f4cee3238baca980b0245dc6529e SHA256 b410934c63b86baa558924a282470c7fd43c71473aa9eaa8c8d6836e3f9cd787
-MD5 17fed47f59c58332918362a68f618f53 ChangeLog 10887
-RMD160 99e5636f9c92e9c56b05c14f42c4b613b961d7d3 ChangeLog 10887
-SHA256 b410934c63b86baa558924a282470c7fd43c71473aa9eaa8c8d6836e3f9cd787 ChangeLog 10887
+MISC ChangeLog 11072 RMD160 183155d6bc8dc6d0fa408144d9e6edb51f78a31c SHA1 bec113bd7903cecda2ce55a3c3fefd076de6554a SHA256 b5b35e45b6993f2397f96aadd0a2eeb8988479b4d96c6a700d58926ab18d1889
+MD5 fc7ffdc0e58cd7f035c929878bacdc9f ChangeLog 11072
+RMD160 183155d6bc8dc6d0fa408144d9e6edb51f78a31c ChangeLog 11072
+SHA256 b5b35e45b6993f2397f96aadd0a2eeb8988479b4d96c6a700d58926ab18d1889 ChangeLog 11072
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 metadata.xml 157
@@ -33,15 +17,10 @@ SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c metadata
 MD5 37fbe5374c8efbea6f32d3bdf6d9b67c files/digest-rmagick-1.15.10 250
 RMD160 2ff25b134bfb313dac8bd2c73c2ca48f4b666ce1 files/digest-rmagick-1.15.10 250
 SHA256 7166b1213f284416781c8c720cdc36f37b91452587ce3a3f258ac32f64c52f12 files/digest-rmagick-1.15.10 250
-MD5 d46bb140ce97e588fb650bcc391452cc files/digest-rmagick-1.15.7 247
-RMD160 533e003ffde31528c3b31b946212e0c62c28e769 files/digest-rmagick-1.15.7 247
-SHA256 2734cbdce743374ebf3209b592efcd69964bcd9f3a46cefcf60022ee15d13e84 files/digest-rmagick-1.15.7 247
-MD5 d46bb140ce97e588fb650bcc391452cc files/digest-rmagick-1.15.7-r1 247
-RMD160 533e003ffde31528c3b31b946212e0c62c28e769 files/digest-rmagick-1.15.7-r1 247
-SHA256 2734cbdce743374ebf3209b592efcd69964bcd9f3a46cefcf60022ee15d13e84 files/digest-rmagick-1.15.7-r1 247
-MD5 20455e71d9f3afc7f8e78f903a441f56 files/digest-rmagick-1.15.8 247
-RMD160 599fb2898d9726307dc8fc5f551947270cd305b7 files/digest-rmagick-1.15.8 247
-SHA256 7d445903e94ea60159dc8b405e14d893b4a7a39244c3c107c5cbb6fef05d35e1 files/digest-rmagick-1.15.8 247
-MD5 0d61b0f7d3853e0f586c1c0d2040f32f files/digest-rmagick-1.3.2 247
-RMD160 8f5ad2543ffeac2e89531e0fba781b4aef8c7b0a files/digest-rmagick-1.3.2 247
-SHA256 1cd53ade0a70e847d3791d9688bd0342ba5e4b53dba735285ede61b2312f4430 files/digest-rmagick-1.3.2 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHaZcJQUozDL2JlH4RAiRFAJ4vbOItgFZAoSF0Y7NivewbMTBYjwCfbIhh
+xQLrmh/FrZw6a02JelbDctI=
+=3o9B
+-----END PGP SIGNATURE-----
