@@ -1,3 +1,0 @@
-MD5 f9ffa4f7cbc0c1ff52bd723674f4c995 RMagick-1.15.7.tar.bz2 958153
-RMD160 8beab6ebdbbd5561f7817b4cb89bb9f19d0e1e61 RMagick-1.15.7.tar.bz2 958153
-SHA256 81865e49060a6080acd224f89893b26e09e24ed8e5df2dc161a000a1fc39559a RMagick-1.15.7.tar.bz2 958153
