@@ -1,3 +1,0 @@
-MD5 8425ca7e4eea54c414bf961d3b7b29b9 RMagick-1.15.8.tar.bz2 958500
-RMD160 7d69c7dc767eba771e0787f1d02c19c5e9823514 RMagick-1.15.8.tar.bz2 958500
-SHA256 638f880800f8bdfb8306e44374e45cd7ca69c2f4fad9cdf572429c7a6c72bbab RMagick-1.15.8.tar.bz2 958500
