@@ -1,3 +1,0 @@
-MD5 d4e26e207d42bc9d3a89ec78a88590b5 RMagick-1.3.2.tar.bz2 1087150
-RMD160 709efd9fe1849bfd999fd53dcc73851f6f343699 RMagick-1.3.2.tar.bz2 1087150
-SHA256 afbe40311042858fe4286694ced1553dd71bb7f3f04124a050c20a37b4dd0690 RMagick-1.3.2.tar.bz2 1087150
