@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rmagick
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.83 2007/10/14 15:26:32 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.84 2007/12/19 22:11:07 graaff Exp $
+
+  19 Dec 2007; Hans de Graaff <graaff@gentoo.org> -rmagick-1.3.2.ebuild,
+  -rmagick-1.15.7.ebuild, -rmagick-1.15.7-r1.ebuild, -rmagick-1.15.8.ebuild:
+  Remove old and ancient versions.
 
   14 Oct 2007; Markus Rothe <corsair@gentoo.org> rmagick-1.15.10.ebuild:
   Stable on ppc64; bug #194246
